assets/css/style.css
/* ... */
/* Mobile Navigation */
.mobile-nav-toggle {
  position: fixed;
  right: 15px;
  top: 15px;
  z-index: 9998;
  border: 0;
  font-size: 24px;
  transition: all 0.4s;
  outline: none !important;
  background-color: #149ddd;
  color: #fff;
  width: 40px;
  height: 40px;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  line-height: 0;
  border-radius: 50px;
  cursor: pointer;
}

.mobile-nav-active {
  overflow: hidden;
}

.mobile-nav-active #header {
  left: 0;
}

/*--------------------------------------------------------------
# Hero Section
--------------------------------------------------------------*/
#hero {
  width: 100%;
  height: 100vh;
  background: url("../img/hero-bg.jpg") top center;
  background-size: cover;
}

@media (max-width: 768px) {
  #hero {
    width: 100%;
    height: 100vh;
    background: url("../img/hero-bg.jpg") top left;
    background-size: auto;
  }
}

#hero:before {
  content: "";
  background: rgba(5, 13, 24, 0.3);
  position: absolute;
  bottom: 0;
  top: 0;
  left: 0;
  right: 0;
  z-index: 1;
}

#hero .hero-container {
  position: relative;
  z-index: 2;
  min-width: 300px;
}

#hero h1 {
  margin: 0 0 10px 0;
  font-size: 64px;
  font-weight: 700;
  line-height: 56px;
  color: #fff;
}

#hero p {
  color: #fff;
  margin-bottom: 50px;
  font-size: 26px;
  font-family: "Poppins", sans-serif;
}

#hero p span {
  color: #fff;
  padding-bottom: 4px;
  letter-spacing: 1px;
  border-bottom: 3px solid #149ddd;
}

@media (min-width: 1024px) {
  #hero {
    background-attachment: fixed;
  }
}

@media (max-width: 768px) {
  #hero h1 {
    font-size: 28px;
    line-height: 36px;
  }

  #hero h2 {
    font-size: 18px;
    line-height: 24px;
    margin-bottom: 30px;
  }
}

/*--------------------------------------------------------------
# Sections General
--------------------------------------------------------------*/
section {
  padding: 40px 0;
  overflow: hidden;
}

.section-bg {
  background: #f5f8fd;
}

.section-title h2 {
  font-size: 32px;
  font-weight: bold;
  margin-bottom: 20px;
  padding-bottom: 20px;
  position: relative;
  color: #173b6c;
}

.section-title h2::after {
  content: "";
  position: absolute;
  display: block;
  width: 50px;
  height: 3px;
  background: #149ddd;
  bottom: 0;
  left: 0;
}

.section-title p {
  margin-bottom: 0;
}

/*--------------------------------------------------------------
# About
--------------------------------------------------------------*/
.about .section-title {
  padding-bottom: 0;
}

.about .row {
  display: grid;
  grid-template-columns: 1fr 1fr;
}

@media (max-width: 768px) {
  .about .row {
    grid-template-columns: 1fr;
  }
}

.about .column .person,
.about .column .info {
  background: rgba(188, 188, 189, 0.226);
  box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.08);
  border-radius: 10px;
  padding-left: 10px;
  padding-right: 10px;
  height: 100%;
}

/* Person */
.about .column .person {
  margin-bottom: 30px;
  text-align: center;
}

.about .column .person h3 {
  font-size: 35px;
  font-weight: bold;
  margin-bottom: 15px;
  color: #173b6c;
}

.about .column .person img {
  width: 45%;
  border: 3px solid #149ddd;
  border-radius: 20px;
}

.about .column .person h4 {
  font-size: 25px;
  font-weight: 500;
  margin-bottom: 20px;
  margin-top: 15px;
}

.about .column .person p {
  font-size: 18px;
  font-weight: 500;
  padding-top: 10px;
  padding-left: 10px;
  padding-right: 10px;
  color: #10294d;
}

.about .column .info {
  height: 100%;
}

.about .column .noBullets {
  list-style: none;
  padding-left: 0;
  margin-bottom: 0;
}

.about .column ul li a i.bx {
  color: #10294d;
  font-size: 35px;
}

.iconLi a {
  display: flex;
  align-items: center;
  width: auto;

}

.iconLi a span {
  text-decoration: underline;
  font-size: 16px;
  font-weight: 500;
  color: #10294d;
}

.iconLi a i {
  margin-right: 5px;
}

.about .column ul.flat {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
}

.about .column ul.flat li {
  margin-right: 10px;
  margin-top: 10px;
}



/* Info */
.about .column .info h4 {
  font-size: 28px;
  font-weight: 600;
  margin-bottom: 2px;
}



.about .column .info ul {
  margin-bottom: 30px;
}

.about .column .info ul li {
  font-size: 16px;
  font-weight: 500;
  color: #10294d;
}

/*--------------------------------------------------------------
# Resume
--------------------------------------------------------------*/
.resume .resume-title {
  font-size: 26px;
  font-weight: 700;
  margin-top: 20px;
  margin-bottom: 20px;
  color: #050d18;
}

.resume .resume-item {
  padding: 0 0 20px 20px;
  margin-top: -2px;
  border-left: 2px solid #1f5297;
  position: relative;
}

.resume .resume-item h4 {
  line-height: 18px;
  font-size: 18px;
  font-weight: 600;
  text-transform: uppercase;
  font-family: "Poppins", sans-serif;
  color: #050d18;
  margin-bottom: 10px;
}

.resume .resume-item h5 {
  font-size: 16px;
  background: #e4edf9;
  padding: 5px 15px;
  display: inline-block;
  font-weight: 600;
  margin-bottom: 10px;
}

.resume .resume-item ul {
  padding-left: 20px;
}

.resume .resume-item ul li {
  padding-bottom: 10px;
}

.resume .resume-item:last-child {
  padding-bottom: 0;
}

.resume .resume-item::before {
  content: "";
  position: absolute;
  width: 16px;
  height: 16px;
  border-radius: 50px;
  left: -9px;
  top: 0;
  background: #fff;
  border: 2px solid #1f5297;
}

/*--------------------------------------------------------------
# Portfolio
--------------------------------------------------------------*/
.portfolio .portfolio-item {
  margin-bottom: 30px;
}

.portfolio #portfolio-flters {
  padding: 0;
  margin: 0 auto 35px auto;
  list-style: none;
  text-align: center;
  background: #fff;
  border-radius: 50px;
  padding: 2px 15px;
}
/* ... */

